# vibeguard

./: Cargo.toml  LICENSE.md  README.md  test-taint.js  test.js  test.ts
.github/workflows/: release.yml
npm/: package.json
rules/: javascript.yaml  rules.yaml
src/: analyzer.rs  main.rs  mcp.rs  parser.rs  rule_engine.rs  scanner.rs  taint.rs
