[package]
name = "vibeguard"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow="1.0"
ignore="0.4"
tree-sitter="0.26.7"
tree-sitter-javascript="0.25"
tree-sitter-python="0.25"
streaming-iterator="0.1.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml="0.9"
rayon="1.11.0"